# MIDIprt

./: .gitignore  Cargo.toml  README.md
MIDIprt/: .gitignore  MIDI_PRT.txt  Makefile  TUNINGS.HTM
MIDIprt/Sourceforge/: architecture.html  manual.html
MIDIprt/examples/: ASTIME.MI$  ASTIME.MID  BLACKVEL.MI$  BLACKVEL.MID  DERDICHT.MI$  DERDICHT.MID  ETUDE_25.MI$  ETUDE_25.MID  FANTASIA.MI$  FIREWRKS.MI$  FIREWRKS.MID  ITALKON1.MI$  ITALKON2.MI$  ITALKON3.MI$  MONDSCHN.MI$  MONDSCHN.MID  TRAEUMER.MI$  VONFREMD.MI$  VONFREMD.MID
MIDIprt/schemes/color/: 66flower.par  66forest.par  66neon.par  66sky.par  75brown.par  75rainbow.par  chromaticpurple.par  puretonescyan.par  puretonesorange.par  pythagoreanpurple.par  pythagoreanredblue.par
MIDIprt/schemes/grey/: 66darker.par  66darkest.par  66light.par  66medium.par  75.par  75greybackground.par  puretones.par  pythagorean.par
MIDIprt/src/: Makefile
MIDIprt/src/common/: scheme.cpp  scheme.h
MIDIprt/src/doc/: MIDI_PRT.U  MIDI_PRT.UHA  MIDI_PRT.ULA  architecture.html  midi_prt.ppt  readme.txt
my_libs/: Makefile  readme.txt
my_libs/include/: VirtualDevice.hpp  colcube.h  diskfile.h  graphic.h  graphicf.h  midi.h  my_vdi.h  notimtab.h  palmutil.h  portable.h  servimem.h  wxVDI.h
my_libs/lib/: Makefile  readme.txt
my_libs/src/: Makefile  colcube.c  colcube.cpp  diskfile.c  graphic.c  graphic.cpp  graphicf.c  midi.c  midi.cpp  my_win32.sln  my_win32.vcproj  notimtab.c  notimtab.cpp  palmutil.c  servimem.c  wxVDI.cpp
src/: MIDIprt.glade  main.rs  main.rs.vonHand  midi.rs  midifile.rs  midiheader.rs  miditracks.rs
(+42 files in other folders)
