[package]
name = "midifileprinter"
version = "0.1.0"
authors = ["Harald Rieder <Harald.Wolfgang.Rieder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "^0"
gio = "^0"
midly = "0.3" # MIDI files
clap = "2.33.0" # command line

[dependencies.gtk]
version = "0.7.0"
features = ["v3_16"]